# hermes-a2a-fleet

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  plugin.yaml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
hermes_a2a_fleet/: __init__.py  auth.py  chain.py  client.py  config.py  fanout.py  registry.py  tools.py  types.py
hermes_a2a_fleet/sources/: __init__.py  base.py  mdns_source.py  static_source.py  tailnet_source.py
tests/: _helpers.py  test_async.py  test_auth.py  test_chain.py  test_client.py  test_fanout.py  test_mdns.py  test_registry.py  test_security.py  test_sources.py  test_tools.py
